[B] Correctly valign react-datepicker day number

--- a/client/src/theme/styles/components/global/forms/_form-inputs-primary.scss
+++ b/client/src/theme/styles/components/global/forms/_form-inputs-primary.scss
@@ -578,6 +578,7 @@
       height: 1.7rem;
       color: inherit;
       border: 1px solid transparent;
+      line-height: 1.45rem;
       border-radius: 50%;
       transition:
         color $duration $timing,
